# unconformity

./: .gitignore  README.md  SPEC.md  pyproject.toml
src/unconformity/: __init__.py  cli.py  git_forensics.py  models.py  palette.py  reporter.py  scanner.py  timeline.py  watcher.py
src/unconformity/detectors/: __init__.py  angular.py  buttress.py  disconformity.py  nonconformity.py  paraconformity.py
tests/: __init__.py  conftest.py  test_angular.py  test_buttress.py  test_disconformity.py  test_nonconformity.py  test_paraconformity.py  test_reporter.py  test_scanner.py  test_timeline.py
