[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "disconformitussy"
version = "0.1.0"
description = "Git forensics for what's MISSING — ussyverse edition"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "gitpython>=3.1",
    "rich>=13.0",
    "rich-click>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
disconformitussy = "unconformity.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
